<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <EditText
            android:id="@+id/shoe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:hint="@string/shoe_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/shoe_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:hint="@string/shoe_size"
            android:inputType="number" />

        <EditText
            android:id="@+id/shoe_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:hint="@string/shoe_company"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/shoe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:hint="@string/shoe_description"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:layout_marginBottom="@dimen/size_16"
            android:background="@drawable/rounded_shape"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_20" />
    </LinearLayout>
</layout>