<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shoe_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_8"
    android:orientation="vertical">

    <TextView
        android:id="@+id/shoe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_20"
        android:textStyle="bold"
        tools:text="@string/shoe_name" />

    <TextView
        android:id="@+id/shoe_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_20"
        tools:text="@string/shoe_size" />

    <TextView
        android:id="@+id/shoe_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_20"
        tools:text="@string/shoe_company" />

    <TextView
        android:id="@+id/shoe_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_20"
        tools:text="@string/shoe_description" />
</LinearLayout>