<?xml version="1.0" encoding="utf-8"?>
<!--LinearLayout-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_300"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_8"
            android:layout_marginTop="@dimen/size_16"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_24" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_16"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_20" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_8"
            android:layout_marginTop="@dimen/size_16"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_24" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_16"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_20" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_16"
            android:background="@drawable/rounded_shape"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_20" />
    </LinearLayout>
</layout>